--- a/index.html
+++ b/index.html
@@ -44,69 +44,7 @@
       </div>
     </div>
     <div class="activity-wrapper">
-      <div class="row card-1">
-        <div class="col-4 work">
-          <div class="preview">
-            <div class="header">
-              <p>Work</p>
-              <img src="./images/icon-ellipsis.svg" alt="" />
-            </div>
-            <h2>32hrs</h2>
-            <p class="hours">Last week-36hrs</p>
-          </div>
-        </div>
-        <div class="col-4 play">
-          <div class="preview">
-            <div class="header">
-              <p>Play</p>
-              <img src="./images/icon-ellipsis.svg" alt="" />
-            </div>
-            <h2>10hrs</h2>
-            <p class="hours">Last week-8hrs</p>
-          </div>
-        </div>
-        <div class="col-4 study">
-          <div class="preview">
-            <div class="header">
-              <p>Study</p>
-              <img src="./images/icon-ellipsis.svg" alt="" />
-            </div>
-            <h2>4hrs</h2>
-            <p class="hours">Last week-7hrs</p>
-          </div>
-        </div>
-      </div>
-      <div class="row card-2">
-        <div class="col-4 exercise">
-          <div class="preview">
-            <div class="header">
-              <p>Exercise</p>
-              <img src="./images/icon-ellipsis.svg" alt="" />
-            </div>
-            <h2>4hrs</h2>
-            <p class="hours">Last week-5hrs</p>
-          </div>
-        </div>
-        <div class="col-4 social">
-          <div class="preview">
-            <div class="header">
-              <p>Social</p>
-              <img src="./images/icon-ellipsis.svg" alt="" />
-            </div>
-            <h2>5hrs</h2>
-            <p class="hours">Last week-10hrs</p>
-          </div>
-        </div>
-        <div class="col-4 self-care">
-          <div class="preview">
-            <div class="header">
-              <p>Self Care</p>
-              <img src="./images/icon-ellipsis.svg" alt="" />
-            </div>
-            <h2>2hrs</h2>
-            <p class="hours">Last week-2hrs</p>
-          </div>
-        </div>
+      <div class="row">
       </div>
     </div>
   </div>
@@ -121,80 +59,3 @@
 </body>
 
 </html>
-<!-- Report for Jeremy Robson Daily Weekly Monthly Work 5hrs -->
-<!-- daily -->
-<!-- Previous - 7hrs -->
-<!-- daily -->
-<!--  -->
-<!-- weekly -->
-<!-- Previous - 36hrs -->
-<!-- weekly -->
-<!-- 103hrs -->
-<!-- monthly -->
-<!-- Previous - 128hrs -->
-<!-- monthly -->
-
-<!-- Play 1hr -->
-<!-- daily -->
-<!-- Previous - 2hrs -->
-<!-- daily
-    10hrs -->
-<!-- weekly -->
-<!-- Previous - 8hrs -->
-<!-- weekly -->
-<!-- 23hrs -->
-<!-- monthly -->
-<!-- Previous - 29hrs -->
-<!-- monthly -->
-
-<!-- Study 0hrs -->
-<!-- daily -->
-<!-- Previous - 1hr -->
-<!-- daily -->
-<!-- 4hrs -->
-<!-- weekly -->
-<!-- Previous - 7hrs -->
-<!-- weekly -->
-<!-- 13hrs -->
-<!-- monthly -->
-<!-- Previous - 19hrs -->
-<!-- monthly -->
-
-<!-- Exercise 1hr -->
-<!-- daily -->
-<!-- Previous - 1hr -->
-<!-- daily -->
-<!-- 4hrs -->
-<!-- weekly -->
-<!-- Previous - 5hrs -->
-<!-- weekly -->
-<!-- 11hrs -->
-<!-- monthly -->
-<!-- Previous - 18hrs -->
-<!-- monthly -->
-
-<!-- Social 1hr -->
-<!-- daily -->
-<!-- Previous - 3hrs -->
-<!-- daily -->
-<!-- 5hrs -->
-<!-- weekly -->
-<!-- Previous - 10hrs -->
-<!-- weekly -->
-<!-- 21hrs -->
-<!-- monthly -->
-<!-- Previous - 23hrs -->
-<!-- monthly -->
-<!-- 
-    Self Care 0hrs -->
-<!-- daily -->
-<!-- Previous - 1hr -->
-<!-- daily -->
-<!-- 2hrs -->
-<!-- weekly -->
-<!-- Previous - 2hrs -->
-<!-- weekly -->
-<!-- 7hrs -->
-<!-- monthly -->
-<!-- Previous - 11hrs -->
-<!-- monthly -->
