--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <title>Frontend Mentor | Time tracking dashboard</title>
 </head>
 
+<!-- Changes by Mehedi Hasan -->
+
 <body>
   <div class="container">
     <div class="featured">
