--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <div class="row"></div>
       </div>
     </div>
-    <div class="attribution">
+    <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Karima Khatun Mim</a>.
-    </div>
+    </div> -->
     <script src="./src/data.js"></script>
     <!-- <script src="./src/mehedi.js"></script> -->
     <script src="./src/main.js"></script>
